# Lumen

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  hub.example.yaml  lumen-config copy.yaml  pyproject.toml
lumen-app/: Platform Support.md  pyproject.toml
lumen-app/docs/: PRESETS_GUIDE.md
lumen-app/examples/config/: hub_ocr_clip.yaml
lumen-app/src/lumen-app/: __init__.py  main.py
lumen-app/src/lumen-app/core/: config.py
lumen-app/src/lumen-app/ui/: app.py
lumen-app/src/lumen_app/: __init__.py  main.py  server.py
lumen-app/src/lumen_app/api/: __init__.py  config.py  hardware.py  install.py  server.py
lumen-app/src/lumen_app/core/: config.py  installer.py  loader.py  router.py  server.py  service.py
lumen-app/src/lumen_app/proto/: ml_service_pb2.py  ml_service_pb2_grpc.py
lumen-app/src/lumen_app/schemas/: __init__.py  hardware.py  install.py
lumen-app/src/lumen_app/services/: __init__.py  config.py  install_orchestrator.py  install_task_repository.py  installer.py  server_manager.py  state.py
lumen-app/src/lumen_app/ui/: app.py  i18n_manager.py
lumen-app/src/lumen_app/utils/: __init__.py  env_checker.py  logger.py  package_resolver.py  preset_registry.py
lumen-app/src/lumen_app/web/: __init__.py  main.py
lumen-app/src/lumen_app/websockets/: logs.py
lumen-app/tests/: test_config_clip_defaults.py  test_install_orchestrator.py  test_preset_registry.py
lumen-app/web-ui/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
lumen-app/web-ui/src/: App.tsx  main.tsx
lumen-app/web-ui/src/context/: WizardContext.tsx  WizardProvider.tsx  useWizard.ts  wizardConfig.ts  wizardContext.ts
lumen-app/web-ui/src/hooks/: useDebounce.ts  useLumenSession.ts  usePathCheck.ts  useTheme.ts
lumen-app/web-ui/src/lib/: api.ts  errorPresentation.ts  wizardValidation.ts
lumen-app/web-ui/src/providers/: ApiProvider.tsx
lumen-app/web-ui/src/types/: schema.d.ts
lumen-app/web-ui/src/views/: Config.tsx  Dashboard.tsx  Hardware.tsx  Install.tsx  OpenPath.tsx  Server.tsx  SessionHub.tsx  Settings.tsx  Welcome.tsx
lumen-clip/: .gitignore  DEPENDENCY.md  QUICKSTART.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json
lumen-clip/Dockerfiles/: Dockerfile
lumen-clip/Dockerfiles/cuda/: Dockerfile
lumen-clip/Dockerfiles/rocm/: Dockerfile
lumen-clip/config/: bioclip_only.yaml  clip_cn.yaml  clip_only.yaml  clip_onnx.yaml  clip_rknn_rk3588.yaml  mps_clip_cn.yaml  unified_service.yaml
lumen-clip/docs/: Lumen Development Protocol_EN.md
lumen-clip/docs/expert_bioclip/: class.md  classify_sequence.md  component.md  init_sequence.md
lumen-clip/examples/config/: bioclip_cn.example.yaml  bioclip_cn.yaml  clip_cn.example.yaml  clip_cn.yaml  clip_onnx_cn.yaml  clip_torch_cn.yaml  unified_cn.example.yaml  unified_cn.yaml
lumen-clip/scripts/: compute_bioclip_npy_embeddings.py  start_service.sh
lumen-clip/src/: backend_factory.py  ml_service_pb2.py  ml_service_pb2.pyi  ml_service_pb2_grpc.py  server.py
lumen-clip/src/backends/: base.py  onnxrt_backend.py  rknn_backend.py  torch_backend.py
lumen-clip/src/biological_atlas/: bioclip_model.py  bioclip_service.py
lumen-clip/src/expert_bioclip/: bioclip_service.py
lumen-clip/src/general_clip/: __init__.py  clip_service.py
lumen-clip/src/image_classification/: clip_model.py  clip_service.py
lumen-clip/src/lumen_clip/: __init__.py  _version.py  models.py  registry.py  server.py
lumen-clip/src/lumen_clip/backends/: __init__.py  backend_exceptions.py  base.py  factory.py  onnxrt_backend.py  rknn_backend.py  torch_backend.py
lumen-clip/src/lumen_clip/expert_bioclip/: bioclip_model.py  bioclip_service.py
lumen-clip/src/lumen_clip/general_clip/: clip_model.py  clip_service.py
lumen-clip/src/lumen_clip/proto/: ml_service.proto  ml_service_pb2.py  ml_service_pb2.pyi  ml_service_pb2_grpc.py
lumen-clip/src/lumen_clip/resources/: __init__.py  loader.py
lumen-clip/src/lumen_clip/unified_smartclip/: __init__.py  smartclip_service.py
lumen-clip/src/resources/: __init__.py  exceptions.py  loader.py
lumen-clip/src/service_registry/: __init__.py  service.py
lumen-clip/src/unified_smartclip/: __init__.py  smartclip_service.py
lumen-clip/test/: check_openclip.py  chinese_clip.py  chinese_clip_text.py
lumen-clip/tests/: README.md  conftest.py  run_tests.py
lumen-clip/tests/fixtures/configs/: test_clip_config.yaml  test_clip_onnx.yaml  test_clip_torch.yaml
lumen-clip/tests/unit/: __init__.py
lumen-clip/tests/unit/test_backends/: __init__.py  test_factory.py  test_lazy_import.py  test_onnxrt_backend.py
lumen-clip/tests/unit/test_models/: __init__.py  test_clip_model.py
lumen-clip/tests/unit/test_preprocessing/: test_normalization.py
lumen-face/: .gitignore  README.md  main.py  pyproject.toml
lumen-face/examples/config/: face_cn.example.yaml  face_cn.yaml
lumen-face/src/backends/: __init__.py  base.py  onnxrt_backend.py
lumen-face/src/face_recognition/: __init__.py
lumen-face/src/lumen_face/: __init__.py  _version.py  registry.py  server.py
lumen-face/src/lumen_face/backends/: __init__.py  backend_exceptions.py  base.py  (+1 more)
lumen-ocr/: README.md  main.py  pyproject.toml
lumen-ocr/src/lumen_ocr/: __init__.py  _version.py  cli.py  registry.py  server.py
lumen-resources/: .gitignore  README.md  pyproject.toml
lumen-resources/docs/examples/: hub-service.yaml  single-service.yaml
lumen-resources/examples/: config_cn_clip.yaml  config_hub.yaml  config_minimal.yaml  config_multi_models.yaml  config_rknn_edge.yaml  model_info_template.json
lumen-resources/src/lumen_resources/: __init__.py  _version.py  cli.py  config.py  downloader.py  exceptions.py  lumen_config.py  lumen_config_validator.py  model_info.py  model_info_validator.py  platform.py
lumen-resources/tests/: __init__.py  test_config.py  test_config_advanced.py  test_config_basic.py  test_config_validation.py  test_model_info_validator.py
lumen-vlm/: README.md  pyproject.toml
lumen-vlm/examples/config/: vlm_cn.example.yaml
lumen-vlm/src/lumen_vlm/: __init__.py  cli.py  registry.py  server.py
(+138 files in other folders)
