[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "lumen_version.py"
version_scheme = "release-branch-semver"
fallback_version = "0.0.0"

[project]
name = "lumen"
dynamic = ["version"]
description = "Lumen monorepo for ML services"
authors = [
    { name = "EdwinZhanCN", email = "support@lumilio.org" }
]
license = { text = "MIT" }
