[project]
name = "lumen-app"
dynamic = ["version"]
description = "Desktop application for Lumen AI services"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EdwinZhanCN", email = "support@lumilio.org" }]
dependencies = [
  "colorlog>=6.10.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "websockets>=14.0",
  "pydantic>=2.10.0",
  "lumen-resources",
  "pyyaml>=6.0.3",
  "aiofiles>=24.1.0",
  "psutil>=6.1.0",
  "httpx>=0.28.0",
  "grpcio>=1.68.0",
  "protobuf>=6.30.0",
  "zeroconf>=0.148.0",
]

[project.urls]
Homepage = "https://github.com/EdwinZhanCN/Lumen"
Issues = "https://github.com/EdwinZhanCN/Lumen/issues"

[project.scripts]
lumen = "lumen_app.core.server:main"
lumen-webui = "lumen_app.web.main:start_webui"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
search_parent_directories = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"lumen_app.web" = ["static/**"]
"lumen_app.utils" = ["mamba/*.yaml"]

[dependency-groups]
dev = ["ruff>=0.14.2", "pytest>=8.0.0", "pytest-asyncio>=0.24.0", "grpcio-tools>=1.76.0"]

[tool.uv.sources]
lumen-resources = { workspace = true }
