[project]
name = "lumen-clip"
dynamic = ["version"]
description = "Lumen, Python Machine Learning (PML) module for Lumilio Photos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "EdwinZhanCN", email = "support@lumilio.org" }
]

dependencies = [
    "open-clip-torch",
    "tokenizers",
    "timm",
    "pillow",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "numpy",
    "python-dotenv",
    "importlib-resources",
    "colorama",
    "pygbif",
    "colorlog",
    "zeroconf",
    "transformers",
    "lumen-resources>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/EdwinZhanCN/Lumen"
Issues = "https://github.com/EdwinZhanCN/Lumen/issues"

[project.scripts]
lumen-clip = "lumen_clip.cli:main"

[project.optional-dependencies]
cpu = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "onnxruntime>=1.16.0",
]


# Python Dependency For Nvidia GPU Platform
# Cuda Version should be 12.6 fixed.
# Python Version Should be 3.10 fixed, be sure to use --index-url https://download.pytorch.org/whl/cu126
cu126 = [
    "torch",
    "torchvision",
    "onnxruntime-gpu",
]

# Python Dependency For Apple Sillicon (M Series) Platform.
# Python Version Should be above 3.10.
# All dependencies will be installed from PyPI. All backends are officially supported on M Series.
# Torch: Metal Performance Shaders (MPS) backend.
# ONNX Runtime: CoreMLEP backend.
mps = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "onnxruntime>=1.16.0",
]

# Python Dependency For Intel OpenVINO Platform.
# Python Version Should be 3.10 fixed.
# Torch is Not Officially Supported on OpenVINO, to use OpenVINO, please choose onnxruntime-openvino as backend.
openvino253 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "onnxruntime-openvino==1.21.0",
]

# Python Dependency For Jetson Platform.
# Cuda Version should be 12.6 fixed.
# Python Version Should be 3.10 fixed, be sure to use --index-url https://pypi.jetson-ai-lab.io/jp6/cu126
jp61cu126 = [
    "torch",
    "torchvision",
    "onnxruntime-gpu",
]

# Python Dependency For Rockchip NPU Platform.
rknn = [
    "rknn-toolkit-lite2",
]


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
search_parent_directories = true

[tool.setuptools.packages.find]
where = ["src"]
