[project]
name = "lumen-clip"
dynamic = ["version"]
description = "Lumen, Python Machine Learning (PML) module for Lumilio Photos"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "EdwinZhanCN", email = "support@lumilio.org" }
]

dependencies = [
    "colorlog>=6.10.1",
    "grpcio>=1.76.0",
    "lumen-resources>=0.3.1",
    "numpy>=1.26.0",
    "onnx>=1.20.0",
    "pillow>=12.0.0",
    "protobuf>=6.33.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.3",
    "zeroconf>=0.148.0",
]

[project.urls]
Homepage = "https://github.com/EdwinZhanCN/Lumen"
Issues = "https://github.com/EdwinZhanCN/Lumen/issues"

[project.scripts]
lumen-clip = "lumen_clip.cli:main"

[project.optional-dependencies]

torch = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "open-clip-torch",
    "timm",
]

cpu = [
    "onnxruntime>=1.16.0",
]


# Python Dependency For Nvidia GPU Platform
# Cuda Version should be 12.6 fixed.
# Python Version Should be 3.10 fixed, be sure to use --index-url https://download.pytorch.org/whl/cu126
cu126 = [
    "onnxruntime-gpu",
]

# Python Dependency For Apple Sillicon (M Series) Platform.
# Python Version Should be above 3.10.
# All dependencies will be installed from PyPI. All backends are officially supported on M Series.
# Torch: Metal Performance Shaders (MPS) backend.
# ONNX Runtime: CoreMLEP backend.
mps = [
    "onnxruntime>=1.16.0",
]

# Python Dependency For Intel OpenVINO Platform.
# Python Version Should be 3.11 fixed.
# Torch is Not Officially Supported on OpenVINO, to use OpenVINO, please choose onnxruntime-openvino as backend.
openvino253 = [
    "onnxruntime-openvino==1.21.0",
]

# Python Dependency For Jetson Platform.
# Cuda Version should be 12.6 fixed.
# Python Version Should be 3.10 fixed, be sure to use --index-url https://pypi.jetson-ai-lab.io/jp6/cu126
jp61cu126 = [
    "onnxruntime-gpu",
]

# Python Dependency For Rockchip NPU Platform.
rknn = [
    "rknn-toolkit-lite2",
]


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
search_parent_directories = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.per-file-ignores]
"*_pb2.py" = ["ALL"]
"*_pb2_grpc.py" = ["ALL"]
"*.pb2.py" = ["ALL"]
"*.pb2_grpc.py" = ["ALL"]
"*.pyi" = ["ALL"]


[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.uv.sources]
lumen-resources = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
