[project]
name = "lumen-ocr"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "EdwinZhanCN", email = "support@lumilio.org" }
]

requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.12.0.88",
    "pyclipper>=1.4.0",
    "shapely>=2.1.2",
    "lumen-resources>=0.2.0",
    "colorlog>=6.7.0",
    "grpcio>=1.59.0",
    "protobuf>=4.25.0",
    "zeroconf>=0.131.0",
    "numpy>=1.26.0",
]


[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.16.0",
]


# Python Dependency For Nvidia GPU Platform
# Cuda Version should be 12.6 fixed.
# Python Version Should be 3.10 fixed, be sure to use --index-url https://download.pytorch.org/whl/cu126
cu126 = [
    "onnxruntime-gpu",
]

# Python Dependency For Apple Sillicon (M Series) Platform.
# Python Version Should be above 3.10.
# All dependencies will be installed from PyPI. All backends are officially supported on M Series.
# ONNX Runtime: CoreMLEP backend.
mps = [
    "onnxruntime>=1.16.0",
]

# Python Dependency For Intel OpenVINO Platform.
# Python Version Should be 3.10 fixed.
openvino253 = [
    "onnxruntime-openvino==1.21.0",
]

# Python Dependency For Jetson Platform.
# Cuda Version should be 12.6 fixed.
# Python Version Should be 3.10 fixed, be sure to use --index-url https://pypi.jetson-ai-lab.io/jp6/cu126
jp61cu126 = [
    "onnxruntime-gpu",
]

[project.scripts]
lumen-ocr = "lumen_ocr.cli:main"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
search_parent_directories = true

[tool.setuptools.packages.find]
where = ["src"]
