[project]
name = "lumen-resources"
dynamic = ["version"]
description = "Unified model resource management for Lumen ML services"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "EdwinZhanCN", email = "support@lumilio.org" }
]

dependencies = [
    "huggingface_hub>=0.20.0",
    "modelscope>=1.11.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "datamodel-code-generator[http]>=0.25.0",
    "pre-commit>=3.0.0",
]
config = ["pyyaml>=6.0.0"]

[project.scripts]
lumen-resources = "lumen_resources.cli:main"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
search_parent_directories = true
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lumen_resources" = ["schemas/*.yaml", "schemas/*.json"]
