[project]
name = "lumen-vlm"
dynamic = ["version"]
description = "VLM Inference Server For Lumen Ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "EdwinZhanCN", email = "support@lumilio.org" }
]
dependencies = [
    "jinja2>=3.1.6",
    "lumen-resources>=0.3.2",
    "numpy>=1.26.0",
    "tokenizers>=0.22.1",
    "colorlog>=6.7.0",
    "grpcio>=1.59.0",
    "protobuf>=4.25.0",
    "zeroconf>=0.131.0",
    "pillow>=12.0.0",
]


[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.16.0",
]


# Python Dependency For Nvidia GPU Platform
# Cuda Version should be 12.6 fixed.
# Python Version Should be 3.10 fixed, be sure to use --index-url https://download.pytorch.org/whl/cu126
# For Jetson platform, use --extra-index-url https://pypi.jetson-ai-lab.io/jp6/cu126
cuda = [
    "onnxruntime-gpu",
]

# Python Dependency For Apple Sillicon (M Series) Platform.
# Python Version Should be above 3.10.
# All dependencies will be installed from PyPI. All backends are officially supported on M Series.
# ONNX Runtime: CoreMLEP backend.
apple = [
    "onnxruntime>=1.16.0",
]

# Python Dependency For Intel OpenVINO Platform.
# Python Version Should be 3.11 fixed.
openvino = [
    "onnxruntime-openvino>=1.21.0",
]

[project.scripts]
lumen-vlm = "lumen_vlm.cli:main"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
search_parent_directories = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"proto/*" = [
    "E402",   # module level import not at top of file
    "F401",   # unused imports (generated files)
    "F403",   # star imports (generated files)
    "F405",   # undefined names from star imports (generated files)
]

[tool.uv.sources]
lumen-resources = { workspace = true }
